// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`@automattic/babel-plugin-replace-textdomain 1. Simple test: 1. Simple test 1`] = `

__( 'foo', 'srcdomain' );
_x( 'foo', 'context', 'srcdomain' );
_n( 'foo', 'foos', n, 'srcdomain' );
_nx( 'foo', 'foos', n, 'context', 'srcdomain' );

i18n.__( 'foo', 'srcdomain' );
i18n._x( 'foo', 'context', 'srcdomain' );
i18n._n( 'foo', 'foos', n, 'srcdomain' );
i18n._nx( 'foo', 'foos', n, 'context', 'srcdomain' );

_not( 'foo', 'foos', n, 'srcdomain' );
i18n._not( 'foo', 'foos', n, 'srcdomain' );
__.not( 'foo', 'srcdomain' );

(0,__)( 'foo', 'srcdomain' );
(0,_x)( 'foo', 'context', 'srcdomain' );
(0,_n)( 'foo', 'foos', n, 'srcdomain' );
(0,_nx)( 'foo', 'foos', n, 'context', 'srcdomain' );

(0,i18n.__)( 'foo', 'srcdomain' );
(0,i18n._x)( 'foo', 'context', 'srcdomain' );
(0,i18n._n)( 'foo', 'foos', n, 'srcdomain' );
(0,i18n._nx)( 'foo', 'foos', n, 'context', 'srcdomain' );


      ↓ ↓ ↓ ↓ ↓ ↓

__('foo', 'new-domain');
_x('foo', 'context', 'new-domain');
_n('foo', 'foos', n, 'new-domain');
_nx('foo', 'foos', n, 'context', 'new-domain');
i18n.__('foo', 'new-domain');
i18n._x('foo', 'context', 'new-domain');
i18n._n('foo', 'foos', n, 'new-domain');
i18n._nx('foo', 'foos', n, 'context', 'new-domain');
_not('foo', 'foos', n, 'srcdomain');
i18n._not('foo', 'foos', n, 'srcdomain');
__.not('foo', 'srcdomain');
(0, __)('foo', 'new-domain');
(0, _x)('foo', 'context', 'new-domain');
(0, _n)('foo', 'foos', n, 'new-domain');
(0, _nx)('foo', 'foos', n, 'context', 'new-domain');
(0, i18n.__)('foo', 'new-domain');
(0, i18n._x)('foo', 'context', 'new-domain');
(0, i18n._n)('foo', 'foos', n, 'new-domain');
(0, i18n._nx)('foo', 'foos', n, 'context', 'new-domain');

`;

exports[`@automattic/babel-plugin-replace-textdomain 1. Simple test: debug calls 1`] = `[]`;

exports[`@automattic/babel-plugin-replace-textdomain 2. Multiple domains, constant mapping: 2. Multiple domains, constant mapping 1`] = `

__( 'foo', 'a' );
_x( 'foo', 'context', 'b' );
_n( 'foo', 'foos', n, 'c' );
_nx( 'foo', 'foos', n, 'context', 'd' );

i18n.__( 'foo', 'a' );
i18n._x( 'foo', 'context', 'b' );
i18n._n( 'foo', 'foos', n, 'c' );
i18n._nx( 'foo', 'foos', n, 'context', 'd' );

_not( 'foo', 'foos', n, 'a' );
i18n._not( 'foo', 'foos', n, 'b' );
__.not( 'foo', 'c' );


      ↓ ↓ ↓ ↓ ↓ ↓

__('foo', 'new-domain');
_x('foo', 'context', 'new-domain');
_n('foo', 'foos', n, 'new-domain');
_nx('foo', 'foos', n, 'context', 'new-domain');
i18n.__('foo', 'new-domain');
i18n._x('foo', 'context', 'new-domain');
i18n._n('foo', 'foos', n, 'new-domain');
i18n._nx('foo', 'foos', n, 'context', 'new-domain');
_not('foo', 'foos', n, 'a');
i18n._not('foo', 'foos', n, 'b');
__.not('foo', 'c');

`;

exports[`@automattic/babel-plugin-replace-textdomain 2. Multiple domains, constant mapping: debug calls 1`] = `[]`;

exports[`@automattic/babel-plugin-replace-textdomain 3. Multiple domains, object mapping: 3. Multiple domains, object mapping 1`] = `

__( 'foo', 'a' );
_x( 'foo', 'context', 'b' );
_n( 'foo', 'foos', n, 'c' );
_nx( 'foo', 'foos', n, 'context', 'd' );

i18n.__( 'foo', 'a' );
i18n._x( 'foo', 'context', 'b' );
i18n._n( 'foo', 'foos', n, 'c' );
i18n._nx( 'foo', 'foos', n, 'context', 'd' );

_not( 'foo', 'foos', n, 'a' );
i18n._not( 'foo', 'foos', n, 'b' );
__.not( 'foo', 'c' );


      ↓ ↓ ↓ ↓ ↓ ↓

__('foo', 'AAA');
_x('foo', 'context', 'b');
_n('foo', 'foos', n, 'CCC');
_nx('foo', 'foos', n, 'context', 'd');
i18n.__('foo', 'AAA');
i18n._x('foo', 'context', 'b');
i18n._n('foo', 'foos', n, 'CCC');
i18n._nx('foo', 'foos', n, 'context', 'd');
_not('foo', 'foos', n, 'a');
i18n._not('foo', 'foos', n, 'b');
__.not('foo', 'c');

`;

exports[`@automattic/babel-plugin-replace-textdomain 3. Multiple domains, object mapping: debug calls 1`] = `
[
  [
    No mapping for textdomain b (first instance)
  1 | __( 'foo', 'a' );
> 2 | _x( 'foo', 'context', 'b' );
    |                       ^^^
  3 | _n( 'foo', 'foos', n, 'c' );
  4 | _nx( 'foo', 'foos', n, 'context', 'd' );
  5 |,
  ],
  [
    No mapping for textdomain d (first instance)
  2 | _x( 'foo', 'context', 'b' );
  3 | _n( 'foo', 'foos', n, 'c' );
> 4 | _nx( 'foo', 'foos', n, 'context', 'd' );
    |                                   ^^^
  5 |
  6 | i18n.__( 'foo', 'a' );
  7 | i18n._x( 'foo', 'context', 'b' );,
  ],
]
`;

exports[`@automattic/babel-plugin-replace-textdomain 4. Multiple domains, function mapping: 4. Multiple domains, function mapping 1`] = `

__( 'foo', 'a' );
_x( 'foo', 'context', 'b' );
_n( 'foo', 'foos', n, 'c' );
_nx( 'foo', 'foos', n, 'context', 'd' );

i18n.__( 'foo', 'a' );
i18n._x( 'foo', 'context', 'b' );
i18n._n( 'foo', 'foos', n, 'c' );
i18n._nx( 'foo', 'foos', n, 'context', 'd' );

_not( 'foo', 'foos', n, 'a' );
i18n._not( 'foo', 'foos', n, 'b' );
__.not( 'foo', 'c' );


      ↓ ↓ ↓ ↓ ↓ ↓

__('foo', 'A');
_x('foo', 'context', 'B');
_n('foo', 'foos', n, 'C');
_nx('foo', 'foos', n, 'context', 'D');
i18n.__('foo', 'A');
i18n._x('foo', 'context', 'B');
i18n._n('foo', 'foos', n, 'C');
i18n._nx('foo', 'foos', n, 'context', 'D');
_not('foo', 'foos', n, 'a');
i18n._not('foo', 'foos', n, 'b');
__.not('foo', 'c');

`;

exports[`@automattic/babel-plugin-replace-textdomain 4. Multiple domains, function mapping: debug calls 1`] = `[]`;

exports[`@automattic/babel-plugin-replace-textdomain 5. Custom functions list: 5. Custom functions list 1`] = `

__( 'foo', 'srcdomain' );
_x( 'foo', 'context', 'srcdomain' );
_n( 'foo', 'foos', n, 'srcdomain' );
_nx( 'foo', 'foos', n, 'context', 'srcdomain' );

i18n.__( 'foo', 'srcdomain' );
i18n._x( 'foo', 'context', 'srcdomain' );
i18n._n( 'foo', 'foos', n, 'srcdomain' );
i18n._nx( 'foo', 'foos', n, 'context', 'srcdomain' );

_not( 'foo', 'foos', n, 'srcdomain' );
i18n._not( 'foo', 'foos', n, 'srcdomain' );
__.not( 'foo', 'srcdomain' );

(0,__)( 'foo', 'srcdomain' );
(0,_x)( 'foo', 'context', 'srcdomain' );
(0,_n)( 'foo', 'foos', n, 'srcdomain' );
(0,_nx)( 'foo', 'foos', n, 'context', 'srcdomain' );

(0,i18n.__)( 'foo', 'srcdomain' );
(0,i18n._x)( 'foo', 'context', 'srcdomain' );
(0,i18n._n)( 'foo', 'foos', n, 'srcdomain' );
(0,i18n._nx)( 'foo', 'foos', n, 'context', 'srcdomain' );


      ↓ ↓ ↓ ↓ ↓ ↓

__('foo', 'srcdomain');
_x('foo', 'context', 'srcdomain');
_n('foo', 'foos', n, 'srcdomain');
_nx('foo', 'foos', n, 'context', 'srcdomain');
i18n.__('foo', 'srcdomain');
i18n._x('foo', 'context', 'srcdomain');
i18n._n('foo', 'foos', n, 'srcdomain');
i18n._nx('foo', 'foos', n, 'context', 'srcdomain');
_not('foo', 'foos', n, 'new-domain');
i18n._not('foo', 'foos', n, 'new-domain');
__.not('foo', 'srcdomain');
(0, __)('foo', 'srcdomain');
(0, _x)('foo', 'context', 'srcdomain');
(0, _n)('foo', 'foos', n, 'srcdomain');
(0, _nx)('foo', 'foos', n, 'context', 'srcdomain');
(0, i18n.__)('foo', 'srcdomain');
(0, i18n._x)('foo', 'context', 'srcdomain');
(0, i18n._n)('foo', 'foos', n, 'srcdomain');
(0, i18n._nx)('foo', 'foos', n, 'context', 'srcdomain');

`;

exports[`@automattic/babel-plugin-replace-textdomain 5. Custom functions list: debug calls 1`] = `[]`;

exports[`@automattic/babel-plugin-replace-textdomain 6. Missing domain parameter: 6. Missing domain parameter 1`] = `

__( 'No domain' );

      ↓ ↓ ↓ ↓ ↓ ↓

__('No domain', 'new-domain');

`;

exports[`@automattic/babel-plugin-replace-textdomain 6. Missing domain parameter: debug calls 1`] = `
[
  [
    Domain argument (index 2) is missing
> 1 | __( 'No domain' );
    | ^^^^^^^^^^^^^^^^^,
  ],
]
`;

exports[`@automattic/babel-plugin-replace-textdomain 7. Missing domain parameter, no replacement: 7. Missing domain parameter, no replacement 1`] = `

__( 'No domain' );

      ↓ ↓ ↓ ↓ ↓ ↓

__('No domain');

`;

exports[`@automattic/babel-plugin-replace-textdomain 7. Missing domain parameter, no replacement: debug calls 1`] = `
[
  [
    Domain argument (index 2) is missing
> 1 | __( 'No domain' );
    | ^^^^^^^^^^^^^^^^^,
  ],
]
`;

exports[`@automattic/babel-plugin-replace-textdomain 8. Missing context and domain parameters: 8. Missing context and domain parameters 1`] = `

_x( 'No domain' );

      ↓ ↓ ↓ ↓ ↓ ↓

_x('No domain', undefined, 'new-domain');

`;

exports[`@automattic/babel-plugin-replace-textdomain 8. Missing context and domain parameters: debug calls 1`] = `
[
  [
    Domain argument (index 3) is missing
> 1 | _x( 'No domain' );
    | ^^^^^^^^^^^^^^^^^,
  ],
]
`;

exports[`@automattic/babel-plugin-replace-textdomain 9. Missing context and domain parameters, no replacement: 9. Missing context and domain parameters, no replacement 1`] = `

_x( 'No domain' );

      ↓ ↓ ↓ ↓ ↓ ↓

_x('No domain');

`;

exports[`@automattic/babel-plugin-replace-textdomain 9. Missing context and domain parameters, no replacement: debug calls 1`] = `
[
  [
    Domain argument (index 3) is missing
> 1 | _x( 'No domain' );
    | ^^^^^^^^^^^^^^^^^,
  ],
]
`;

exports[`@automattic/babel-plugin-replace-textdomain 10. Non-literal domain: 10. Non-literal domain 1`] = `

__( 'Non-literal domain', domain );

      ↓ ↓ ↓ ↓ ↓ ↓

__('Non-literal domain', domain);

`;

exports[`@automattic/babel-plugin-replace-textdomain 10. Non-literal domain: debug calls 1`] = `
[
  [
    Domain argument should be a StringLiteral, not Identifier
> 1 | __( 'Non-literal domain', domain );
    |                           ^^^^^^,
  ],
]
`;

exports[`@automattic/babel-plugin-replace-textdomain 11. Template-string domain: 11. Template-string domain 1`] = `

__( 'Template-string domain', \`domain\` );

      ↓ ↓ ↓ ↓ ↓ ↓

__('Template-string domain', 'new-domain');

`;

exports[`@automattic/babel-plugin-replace-textdomain 11. Template-string domain: debug calls 1`] = `[]`;

exports[`@automattic/babel-plugin-replace-textdomain 12. Template-string domain, no replacement: 12. Template-string domain, no replacement 1`] = `

__( 'Template-string domain', \`domain\` );

      ↓ ↓ ↓ ↓ ↓ ↓

__('Template-string domain', \`domain\`);

`;

exports[`@automattic/babel-plugin-replace-textdomain 12. Template-string domain, no replacement: debug calls 1`] = `
[
  [
    No mapping for textdomain domain (first instance)
> 1 | __( 'Template-string domain', \`domain\` );
    |                               ^^^^^^^^,
  ],
]
`;

exports[`@automattic/babel-plugin-replace-textdomain 13. Template-string domain with expression: 13. Template-string domain with expression 1`] = `

__( 'Template-string domain', \`domain \${ x }\` );

      ↓ ↓ ↓ ↓ ↓ ↓

__('Template-string domain', \`domain \${x}\`);

`;

exports[`@automattic/babel-plugin-replace-textdomain 13. Template-string domain with expression: debug calls 1`] = `
[
  [
    Domain argument should be a StringLiteral, not TemplateLiteral
> 1 | __( 'Template-string domain', \`domain \${ x }\` );
    |                               ^^^^^^^^^^^^^^^,
  ],
]
`;

exports[`@automattic/babel-plugin-replace-textdomain 14. Expression domain: 14. Expression domain 1`] = `

__( 'Expression', 'dom' + 'ain' );

      ↓ ↓ ↓ ↓ ↓ ↓

__('Expression', 'dom' + 'ain');

`;

exports[`@automattic/babel-plugin-replace-textdomain 14. Expression domain: debug calls 1`] = `
[
  [
    Domain argument should be a StringLiteral, not BinaryExpression
> 1 | __( 'Expression', 'dom' + 'ain' );
    |                   ^^^^^^^^^^^^^,
  ],
]
`;

exports[`@automattic/babel-plugin-replace-textdomain 15. Doesn't try to handle \`toString()\` or the like: debug calls 1`] = `[]`;

exports[`@automattic/babel-plugin-replace-textdomain 16. Import alias: replaces domain: 16. Import alias: replaces domain 1`] = `

import { __ as __alias } from '@wordpress/i18n';
__alias( 'Hello', 'old-domain' );

      ↓ ↓ ↓ ↓ ↓ ↓

import { __ as __alias } from '@wordpress/i18n';
__alias('Hello', 'new-domain');

`;

exports[`@automattic/babel-plugin-replace-textdomain 16. Import alias: replaces domain: debug calls 1`] = `[]`;

exports[`@automattic/babel-plugin-replace-textdomain 17. Import alias: injects missing domain: 17. Import alias: injects missing domain 1`] = `

import { __ as __alias } from '@wordpress/i18n';
__alias( 'Hello' );

      ↓ ↓ ↓ ↓ ↓ ↓

import { __ as __alias } from '@wordpress/i18n';
__alias('Hello', 'new-domain');

`;

exports[`@automattic/babel-plugin-replace-textdomain 17. Import alias: injects missing domain: debug calls 1`] = `
[
  [
    Domain argument (index 2) is missing
  1 | import { __ as __alias } from '@wordpress/i18n';
> 2 | __alias( 'Hello' );
    | ^^^^^^^^^^^^^^^^^^,
  ],
]
`;

exports[`@automattic/babel-plugin-replace-textdomain 18. Import alias: custom i18nModule: 18. Import alias: custom i18nModule 1`] = `

import { __ as __alias } from 'my-i18n';
__alias( 'Hello', 'old-domain' );

      ↓ ↓ ↓ ↓ ↓ ↓

import { __ as __alias } from 'my-i18n';
__alias('Hello', 'new-domain');

`;

exports[`@automattic/babel-plugin-replace-textdomain 18. Import alias: custom i18nModule: debug calls 1`] = `[]`;

exports[`@automattic/babel-plugin-replace-textdomain 19. Import alias: ignores non-i18n imports: debug calls 1`] = `[]`;

exports[`@automattic/babel-plugin-replace-textdomain 20. Import alias: ignores global variables with no binding: debug calls 1`] = `[]`;

exports[`@automattic/babel-plugin-replace-textdomain 21. Import alias: ignores field accesses with same name: debug calls 1`] = `[]`;

exports[`@automattic/babel-plugin-replace-textdomain 22. Import alias: ignores shadowed variables: debug calls 1`] = `[]`;

exports[`@automattic/babel-plugin-replace-textdomain 23. requireI18nSource: ignores a member call on a non-i18n binding: debug calls 1`] = `[]`;

exports[`@automattic/babel-plugin-replace-textdomain 24. requireI18nSource: ignores a locally defined function: debug calls 1`] = `[]`;

exports[`@automattic/babel-plugin-replace-textdomain 25. requireI18nSource: stamps esbuild externalized output: 25. requireI18nSource: stamps esbuild externalized output 1`] = `

var require_i18n = __commonJS( {
	"package-external:@wordpress/i18n"( exports, module ) {
		module.exports = window.wp.i18n;
	}
} );
var import_i18n3 = __toESM( require_i18n(), 1 );
x = (0, import_i18n3.__)( 'Hello' );

      ↓ ↓ ↓ ↓ ↓ ↓

var require_i18n = __commonJS({
	'package-external:@wordpress/i18n'(exports, module) {
		module.exports = window.wp.i18n;
	},
});
var import_i18n3 = __toESM(require_i18n(), 1);
x = (0, import_i18n3.__)('Hello', 'new-domain');

`;

exports[`@automattic/babel-plugin-replace-textdomain 25. requireI18nSource: stamps esbuild externalized output: debug calls 1`] = `
[
  [
    Domain argument (index 2) is missing
  5 | } );
  6 | var import_i18n3 = __toESM( require_i18n(), 1 );
> 7 | x = (0, import_i18n3.__)( 'Hello' );
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^,
  ],
]
`;

exports[`@automattic/babel-plugin-replace-textdomain 26. requireI18nSource: stamps the minified externalized shape: 26. requireI18nSource: stamps the minified externalized shape 1`] = `

var Te=Ht((a,b)=>{b.exports=window.wp.i18n;});var Ri=f(Te(),1);x=(0,Ri.__)("Hi");

      ↓ ↓ ↓ ↓ ↓ ↓

var Te = Ht((a, b) => {
	b.exports = window.wp.i18n;
});
var Ri = f(Te(), 1);
x = (0, Ri.__)('Hi', 'new-domain');

`;

exports[`@automattic/babel-plugin-replace-textdomain 26. requireI18nSource: stamps the minified externalized shape: debug calls 1`] = `
[
  [
    Domain argument (index 2) is missing
> 1 | var Te=Ht((a,b)=>{b.exports=window.wp.i18n;});var Ri=f(Te(),1);x=(0,Ri.__)("Hi");
    |                                                                  ^^^^^^^^^^^^^^^,
  ],
]
`;

exports[`@automattic/babel-plugin-replace-textdomain 27. requireI18nSource: stamps a require() of the i18n module: 27. requireI18nSource: stamps a require() of the i18n module 1`] = `

const i18n = require( '@wordpress/i18n' );
i18n.__( 'Hello' );

      ↓ ↓ ↓ ↓ ↓ ↓

const i18n = require('@wordpress/i18n');
i18n.__('Hello', 'new-domain');

`;

exports[`@automattic/babel-plugin-replace-textdomain 27. requireI18nSource: stamps a require() of the i18n module: debug calls 1`] = `
[
  [
    Domain argument (index 2) is missing
  1 | const i18n = require( '@wordpress/i18n' );
> 2 | i18n.__( 'Hello' );
    | ^^^^^^^^^^^^^^^^^^,
  ],
]
`;

exports[`@automattic/babel-plugin-replace-textdomain 28. requireI18nSource: stamps an import of the i18n module: 28. requireI18nSource: stamps an import of the i18n module 1`] = `

import { __ } from '@wordpress/i18n';
__( 'Hello' );

      ↓ ↓ ↓ ↓ ↓ ↓

import { __ } from '@wordpress/i18n';
__('Hello', 'new-domain');

`;

exports[`@automattic/babel-plugin-replace-textdomain 28. requireI18nSource: stamps an import of the i18n module: debug calls 1`] = `
[
  [
    Domain argument (index 2) is missing
  1 | import { __ } from '@wordpress/i18n';
> 2 | __( 'Hello' );
    | ^^^^^^^^^^^^^,
  ],
]
`;

exports[`@automattic/babel-plugin-replace-textdomain 29. requireI18nSource: stamps when the callee source is unknown: 29. requireI18nSource: stamps when the callee source is unknown 1`] = `

x = (0, e.__)( 'Hello' );

      ↓ ↓ ↓ ↓ ↓ ↓

x = (0, e.__)('Hello', 'new-domain');

`;

exports[`@automattic/babel-plugin-replace-textdomain 29. requireI18nSource: stamps when the callee source is unknown: debug calls 1`] = `
[
  [
    Domain argument (index 2) is missing
> 1 | x = (0, e.__)( 'Hello' );
    |     ^^^^^^^^^^^^^^^^^^^^,
  ],
]
`;
